export const snapshot = {};

snapshot[`Typegraph using kv 1`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "kv",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "get": 1,
          "set": 4,
          "delete": 6,
          "keys": 8,
          "values": 12
        },
        "required": [
          "get",
          "set",
          "delete",
          "keys",
          "values"
        ]
      },
      {
        "type": "function",
        "title": "func_4",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "key": 3
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 5,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_7",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "key": 3,
          "value": 3
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_15",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 7,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_22",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 11,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_18",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "filter": 10
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "optional_17",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 3,
        "default_value": null
      },
      {
        "type": "list",
        "title": "list_20",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 3
      },
      {
        "type": "function",
        "title": "func_29",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 11,
        "materializer": 5,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "kv_get",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "kv_set",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": true
        },
        "data": {}
      },
      {
        "name": "kv_delete",
        "runtime": 1,
        "effect": {
          "effect": "delete",
          "idempotent": true
        },
        "data": {}
      },
      {
        "name": "kv_keys",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      },
      {
        "name": "kv_values",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "kv",
        "data": {
          "url": "REDIS"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`Typegraph using kv 2`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "kv",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "get": 1,
          "set": 4,
          "delete": 6,
          "keys": 8,
          "values": 12
        },
        "required": [
          "get",
          "set",
          "delete",
          "keys",
          "values"
        ]
      },
      {
        "type": "function",
        "title": "func_25",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "key": 3
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_26",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 5,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_6",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "key": 3,
          "value": 3
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_27",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 7,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "integer",
        "title": "integer_11",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_28",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 11,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_15",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "filter": 10
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "optional_14",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 3,
        "default_value": null
      },
      {
        "type": "list",
        "title": "list_17",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 3
      },
      {
        "type": "function",
        "title": "func_29",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 11,
        "materializer": 5,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "kv_get",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "kv_set",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {}
      },
      {
        "name": "kv_delete",
        "runtime": 1,
        "effect": {
          "effect": "delete",
          "idempotent": true
        },
        "data": {}
      },
      {
        "name": "kv_keys",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      },
      {
        "name": "kv_values",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "kv",
        "data": {
          "url": "REDIS"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;
